<resources>
    <string name="app_name">OuPayPay</string>
    <string name="title_activity_base">BaseActivity</string>

    <!--主页tab按键名字-->
    <string name="title_home">主页</string>
    <string name="title_mine">我的</string>
    <string name="title_bank">账户</string>
    <string name="title_friend">朋友</string>
    <string name="privite_profile">个人主页</string>
    <string name="my_bank">我的银行卡</string>
    <string name="my_code">我的二维码</string>
    <string name="my_collect">收藏</string>
    <string name="my_message">我的消息</string>
    <string name="my_customer_service">我的客服</string>
    <string name="profile_title">个人中心</string>
    <string name="profile_desc">介绍一下自己</string>
    <string name="profile_nickname">姓名</string>


    <!--主页tab按键名字-->

    <string name="home_bankcard">银行卡</string>
    <string name="home_scan">扫一扫</string>
    <string name="home_receive">收款</string>
    <string name="home_pay">付款</string>

    <string name="home_yue">账户余额</string>
    <string name="home_change">转账</string>
    <string name="home_payback">还款</string>
    <string name="home_cards">卡券</string>
    <string name="home_share">分享</string>





    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="tv_account">欧佩账户</string>
    <string name="profile_name">真实姓名</string>
    <string name="my_assets">我的资产</string>
    <string name="opay_code">欧佩扫一扫,加我为好友</string>
    <string name="title_home_bank">首页</string>
    <string name="add_my_bank">添加银行卡</string>
    <string name="binding_bank">请绑定持卡人本人的银行卡</string>
    <string name="bank_owner">持卡人</string>
    <string name="bank_code">卡号</string>
    <string name="input_bank_owner">输入持卡人姓名</string>
    <string name="input_bank_code">输入卡号</string>
    <string name="tv_next">下一步</string>
    <string name="my_assets_all">总资产</string>
    <string name="assets_my_yuer">余额</string>
    <string name="assets_my_hong">红包</string>
    <string name="assets_my_jifen">积分</string>
    <string name="yesterday_collect">昨日收入</string>
    <string name="assets_my_zhuanru">转入</string>
    <string name="assets_my_zhuanchu">转出</string>
    <string name="verification_phone">验证手机号</string>
    <string name="phone_verification_code">验证码</string>
    <string name="get_authentication_code">获取验证码</string>
    <string name="can_not_get_code">收不到验证码？</string>
    <string name="success">完成</string>
    <string name="add_success">添加完成</string>
    <string name="tv_blance_etailed">明细</string>
    <string name="money">¥</string>
    <string name="my_recharge">充值</string>
    <string name="my_withdrawals">提现</string>
    <string name="opay_walet">欧佩钱包</string>

</resources>
