<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="9dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tv_back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iv_back"
            android:text="@string/title_home_bank"
            android:textColor="#4A4A4A"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_my_bank"
            android:textColor="@color/black"
            android:textSize="17sp"/>


        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/len_12"
            android:background="@color/black"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ececec"
        android:paddingLeft="25dp"
        android:paddingTop="19dp"
        android:text="@string/binding_bank"
        android:textSize="14sp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/bank_owner"
            android:textColor="#4A4A4A"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/et_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/len_30"
            android:layout_marginStart="90dp"
            android:background="@null"
            android:hint="@string/input_bank_owner"
            android:textColor="@color/base_text_gray"
            android:textSize="15sp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ececec"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/bank_code"
            android:textColor="#4A4A4A"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/et_bank_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/len_30"
            android:layout_marginStart="90dp"
            android:background="@null"
            android:hint="@string/input_bank_code"
            android:textColor="@color/base_text_gray"
            android:textSize="15sp"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="@dimen/len_22"
        android:background="@drawable/bt_next_border"
        android:gravity="center"
        android:text="@string/tv_next"
        android:textColor="@color/white"
        android:textSize="17sp"/>


</LinearLayout>