<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/tv_back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/iv_back"
            android:text="@string/title_home_bank"
            android:textColor="#4A4A4A"/>


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/verification_phone"
            android:textColor="@color/black"/>


        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/len_12"
            android:visibility="gone"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:lineSpacingExtra="5dp"
        tools:text="本次操作需要短信确认，
验证码已发送至手机182****7913"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/len_12"
        android:background="@color/white"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/tv_veri_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/phone_verification_code"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_code"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/tv_veri_code"
            android:background="@null"
            android:inputType="number"
            android:singleLine="true"/>


        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/get_authentication_code"
            android:textColor="#4A90E2"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="@dimen/len_22"
        android:background="@drawable/bt_next_border"
        android:gravity="center"
        android:text="@string/tv_next"
        android:textColor="@color/white"
        android:textSize="17sp"/>


    <TextView
        android:id="@+id/tv_cannot_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:text="@string/can_not_get_code"/>

</LinearLayout>