<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
       >

        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/iv_back"
            android:layout_width="9dp"
            android:layout_height="15dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iv_back"
            android:text="@string/title_home_bank"
            android:textColor="#4A4A4A"
            android:textSize="15sp"/>


        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_my_bank"
            android:textColor="@color/black"
            android:textSize="17sp"/>


        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/len_12"
            android:text="@string/success"
            android:textColor="#4A90E2"
            android:textSize="15sp"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/len_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_success"
        android:textColor="@color/black"
        android:textSize="@dimen/font_22"/>


</LinearLayout>