<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/main_color"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/tv_back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/iv_back"
            android:text="@string/title_mine"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/my_bank"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/iv_blance_detailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/len_12"
            android:text="@string/tv_blance_etailed"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/main_color">

        <TextView
            android:id="@+id/tv_money_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/len_26"
            android:layout_marginStart="@dimen/len_20"
            android:text="@string/money"
            android:textColor="@color/white"
            android:textSize="@dimen/len_26"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/tv_my_blance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@+id/tv_money_type"
            android:textColor="@color/white"
            android:textSize="44dp"
            tools:text="1.00"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_12"
        android:background="#ececec"/>


    <RelativeLayout
        android:id="@+id/re_my_recharge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_48"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/len_20"
            android:layout_height="@dimen/len_20"
            android:layout_marginStart="15dp"
            android:src="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_50"
            android:text="@string/my_recharge"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@color/black"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/len_50"
        android:background="#EBEBEB"/>

    <RelativeLayout
        android:id="@+id/re_my_withdrawals"
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_48"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/len_20"
            android:layout_height="@dimen/len_20"
            android:layout_marginStart="15dp"
            android:src="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_50"
            android:text="@string/my_withdrawals"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ececec"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_opay_walet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/len_18"
            android:gravity="center"
            android:text="@string/opay_walet"
            android:textColor="#4A4A4A"
            android:textSize="14sp"/>


        <TextView
            android:id="@+id/tv_shu"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/len_18"
            android:layout_marginEnd="@dimen/len_8"
            android:layout_marginStart="@dimen/len_8"
            android:layout_toEndOf="@+id/tv_opay_walet"
            android:gravity="center"
            android:text="@string/opay_walet"
            android:textColor="#9B9B9B"
            android:textSize="14sp"/>


        <TextView
            android:id="@+id/tv_common_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/len_18"
            android:layout_toEndOf="@+id/tv_shu"
            android:gravity="center"
            android:text="@string/opay_walet"
            android:textColor="#4A90E2"
            android:textSize="14sp"/>


    </RelativeLayout>


</LinearLayout>